WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250486
imported/w3c/web-platform-tests/service-workers/service-worker/navigation-sets-cookie.https.html is flaky crashing
https://bugs.webkit.org/show_bug.cgi?id=250486
Summary
imported/w3c/web-platform-tests/service-workers/service-worker/navigation-set...
Chris Dumez
Reported
2023-01-11 15:57:47 PST
imported/w3c/web-platform-tests/service-workers/service-worker/navigation-sets-cookie.https.html is flaky crashing: ASSERTION FAILED: The string being removed is an atom in the string table of an other thread! iterator != atomStringTable.end() /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WTF/wtf/text/AtomStringImpl.cpp(457) : static void WTF::AtomStringImpl::remove(WTF::AtomStringImpl *) 2023-01-11 12:13:42.998 com.apple.WebKit.WebContent.Development[79984:10590385] XType: can't switch to GlobalFontRegistry. XTFontStaticRegistry is not enabled. 1 0x5217152d9 WTFCrash 2 0x52171f4a9 WTF::AtomStringImpl::remove(WTF::AtomStringImpl*) 3 0x5218072b5 WTF::StringImpl::~StringImpl() 4 0x521807655 WTF::StringImpl::~StringImpl() 5 0x521807675 WTF::StringImpl::destroy(WTF::StringImpl*) 6 0x50baf5fbf WTF::StringImpl::deref() 7 0x50baf5f4e WTF::DefaultRefDerefTraits<WTF::StringImpl>::derefIfNotNull(WTF::StringImpl*) 8 0x50baf5f19 WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl> >::~RefPtr() 9 0x50baf5ee5 WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl> >::~RefPtr() 10 0x50baf5ec5 WTF::String::~String() 11 0x50baf5cc5 WTF::String::~String() 12 0x50bbc1f65 WTF::AtomString::~AtomString() 13 0x50bbc19d5 WTF::AtomString::~AtomString() 14 0x50bbc1904 WebCore::ResourceResponseBase::~ResourceResponseBase() 15 0x50bbc1899 WebCore::ResourceResponse::~ResourceResponse() 2023-01-11 12:13:43.158 com.apple.WebKit.WebContent.Development[79984:10590385] XType: can't switch to GlobalFontRegistry. XTFontStaticRegistry is not enabled. 16 0x50bbc16a5 WebCore::ResourceResponse::~ResourceResponse() 17 0x50dfe0960 WebKit::WebServiceWorkerFetchTaskClient::~WebServiceWorkerFetchTaskClient() 18 0x50dfcefc5 WebKit::WebServiceWorkerFetchTaskClient::~WebServiceWorkerFetchTaskClient() 19 0x50dfcefe9 WebKit::WebServiceWorkerFetchTaskClient::~WebServiceWorkerFetchTaskClient() 20 0x4e958a20f WTF::ThreadSafeRefCounted<WebCore::ServiceWorkerFetch::Client, (WTF::DestructionThread)1>::deref() const::'lambda'()::operator()() const 21 0x4e958a1b9 WTF::Detail::CallableWrapper<WTF::ThreadSafeRefCounted<WebCore::ServiceWorkerFetch::Client, (WTF::DestructionThread)1>::deref() const::'lambda'(), void>::call() 22 0x5217453a2 WTF::Function<void ()>::operator()() const 23 0x5217ee18e WTF::RunLoop::performWork() 24 0x5217f3e0e WTF::RunLoop::performWork(void*) 25 0x7ff813fa8bc8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-01-11 15:58:01 PST
<
rdar://104138207
>
Chris Dumez
Comment 2
2023-01-11 16:07:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8547
Chris Dumez
Comment 3
2023-01-12 09:07:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8577
EWS
Comment 4
2023-01-12 12:47:14 PST
Committed
258847@main
(c41dfa79a585): <
https://commits.webkit.org/258847@main
> Reviewed commits have been landed. Closing PR #8577 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug