imported/w3c/web-platform-tests/service-workers/service-worker/navigation-sets-cookie.https.html is flaky crashing https://bugs.webkit.org/show_bug.cgi?id=250486 rdar://104138207

Reviewed by NOBODY (OOPS!).

WebServiceWorkerFetchTaskClient objects were owned by the ServiceWorkerThreadProxy
via the m_ongoingFetchTasks HashMap. Even though ServiceWorkerThreadProxy is a
main thread object, it would make sure to only use `m_ongoingFetchTasks` on the
service worker thread.

WebServiceWorkerFetchTaskClient has a data member which is a ResourceResponse
and contains AtomString data members. As a result, which thread we destroy
the WebServiceWorkerFetchTaskClient on matters and getting it wrong causes crashes
such as the one in this bug.

The ResourceResponse in question gets constructed on the service worker thread,
which is expected given that WebServiceWorkerFetchTaskClient objects are mainly
used on this thread. However, ServiceWorkerFetch::Client (the base class for
WebServiceWorkerFetchTaskClient) was subclassing
`ThreadSafeRefCounted<Client, WTF::DestructionThread::Main>`, causing it to
always get destroyed on the main thread.

To address the issue, I made the following changes:
- Have ServiceWorkerFetch::Client subclass ThreadSafeRefCounted<Client> instead so
  that it can be destroyed on the service worker thread.
- Make sure that ServiceWorkerFetch::Client objects are always constructed, used
  and destroyed on the service worker thread.
- To make sure the previous step is always true, I moved the `m_ongoingFetchTasks`
  HashMap from ServiceWorkerThreadProxy (which is a main thread object) to
  ServiceWorkerGlobalScope (which lives on the service worker thread).
- I added threading assertions to make sure m_ongoingFetchTasks is always used on
  the service worker thread.

* Source/WebCore/workers/service/ServiceWorkerGlobalScope.cpp:
(WebCore::ServiceWorkerGlobalScope::addOngoingFetchTask):
(WebCore::ServiceWorkerGlobalScope::ongoingFetchTask const):
(WebCore::ServiceWorkerGlobalScope::takeOngoingFetchTask):
(WebCore::ServiceWorkerGlobalScope::hasOngoingFetchTasks const):
* Source/WebCore/workers/service/ServiceWorkerGlobalScope.h:
* Source/WebCore/workers/service/context/ServiceWorkerFetch.h:
* Source/WebCore/workers/service/context/ServiceWorkerThreadProxy.cpp:
(WebCore::ServiceWorkerThreadProxy::startFetch):
(WebCore::ServiceWorkerThreadProxy::cancelFetch):
(WebCore::ServiceWorkerThreadProxy::convertFetchToDownload):
(WebCore::ServiceWorkerThreadProxy::navigationPreloadIsReady):
(WebCore::ServiceWorkerThreadProxy::navigationPreloadFailed):
(WebCore::ServiceWorkerThreadProxy::continueDidReceiveFetchResponse):
(WebCore::ServiceWorkerThreadProxy::removeFetch):
* Source/WebCore/workers/service/context/ServiceWorkerThreadProxy.h:
* Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::startFetch):