Source/WebCore/workers/service/context/ServiceWorkerFetch.h
@@ -46,7 +46,7 @@ class ServiceWorkerGlobalScope;
 class SharedBuffer;
 
 namespace ServiceWorkerFetch {
-class Client : public ThreadSafeRefCounted<Client, WTF::DestructionThread::Main> {
+class Client : public ThreadSafeRefCounted<Client> {
 public:
     virtual ~Client() = default;
 
